# SENSE

./: .gitignore  2026-01-24-implement-the-following-plan-newest.txt  2026-01-24-major-changes.txt  ARCH.md  AUDIT.md  AUDIT_REPORT_2026.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTIVE_ORCHESTRATOR.md  DIRECTIVE_UNIVERSAL.md  Dockerfile  GEMINI.md  HANDOFF.md  IMPLEMENTATION_STATE.md  PRE_COMMIT_CHECKLIST.md  PROGRESS.md  RATIONALE.md  README.md  ROADMAP_V4_V9.md  SYSTEM_PROMPT.md  TECHNICAL_REPORT.md  VALIDATION_EXECUTIVE_SUMMARY.md  VALIDATION_SUMMARY.md  WIKI.md  WIRING_ANALYSIS.md  config.json  config.yaml  docker-compose.yml  pyproject.toml  pytest_out.txt  requirements.txt  run_protocol_tests.py  run_tests.py  setup.py  test.sh  test_imports_quick.py  test_out.txt  test_output.txt  verify_implementation.py  (+3 more)
.github/workflows/: blank.yml
_backup_pre_consolidation/core/: __init__.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
core/evolution/: genome.py  population.py
core/plugins/: engram_ingestion.py  interface.py  mock_sensor.py
notes/: 2026-01-15-utilize-the-systempromptmd-file-and-analyze-the.txt  2026-01-16-implement-the-following-plan(most-recent).txt  2026-01-16-implement-the-following-plan-newest.txt  2026-01-17-implement-the-following-plan(claude newest).txt  2026-01-18-implement-the-following-plan.txt  2026-01-21-MID-CHANGE_PROGRESS-out-of-usage.txt
sense/core/: __init__.py  reasoning_orchestrator.py
sense_v2/: __init__.py  config.py
sense_v2/api/: app.py
sense_v2/core/: __init__.py  config.py  extensions.py
tests/: test_anomaly.py  test_api.py  test_compute_allocation.py  test_config.py  test_database.py  test_engram_ingestion.py  test_engram_manager.py  test_engram_model.py  test_engram_storage.py  test_engram_tokenizer.py  test_extensions.py  test_filesystem.py  test_integration_v4.py  test_kernels.py  test_llm_providers.py  test_memory_aware.py  test_memory_tools.py  test_orchestrator_flow.py  test_orchestrator_init.py  test_phase3_evolution.py  test_population_deap.py  test_protocol.py  test_protocol_async.py  test_reasoning_memory.py  test_reasoning_orchestrator.py  test_reflexion.py  test_rewards.py  test_security.py  test_terminal.py  test_tool_forge.py  test_user_model.py
(+221 files in other folders)
