[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sense"
version = "3.1.0"
description = "SENSE: Self-Evolving Network & Semantic Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "psutil",
    "streamlit",
    "openai",
    "pyyaml",
    "sentence-transformers"
]

[project.scripts]
sense = "sense.main:main"
sense-dashboard = "sense.dashboard_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tools", "agent-zero", "Agent0", "_reference_libs", "_archive"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]